# sphinx-autodoc-defaultargs

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  sphinx_autodoc_defaultargs.py  tox.ini
.github/workflows/: python-package.yml
sphinx-autodoc-defaultargs/doc/_ext/: sphinx_autodoc_defaultargs.py
sphinx_autodoc_defaultargs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  myclasses.py  test_myclasses.py  test_sphinx_autodoc_defaultargs.py
tests/roots/test-dummy/: conf.py  dummy_module.py  index.rst
tests/roots/test-dummy/_static/css/: custom.css
