[metadata]
name = sphinx-autodoc-defaultargs
description = Automatic generation of default arguments for the Sphinx autodoc extension.
long_description = file: README.md
author = Zhi Wang
author_email = zhiwang@uchicago.edu
license = MIT
project_urls =
    Source code = https://github.com/zwang123/sphinx-autodoc-defaultargs
    Issue tracker = https://github.com/zwang123/sphinx-autodoc-defaultargs/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: Sphinx :: Extension
    Topic :: Documentation :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = sphinx_autodoc_defaultargs
python_requires = >=3.5
install_requires = Sphinx >= 3.0

[options.extras_require]
test =
    pytest >= 3.1.0
    typing_extensions >= 3.5
    dataclasses; python_version == "3.6"
    sphobjinv >= 2.0
    Sphinx >= 3.2.0
type_comments =
    typed_ast >= 1.4.0; python_version < "3.8"

[flake8]
max-line-length = 79

[tool:pytest]
addopts = -rsx --tb=short
testpaths = tests
